--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family: 'Arial', 'Helvetica', 'sans-serif'
+    font-family: 'Arial', 'Helvetica', 'sans-serif';
+    font-size: medium;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
