--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 60px auto;
     width: 70%;
     font-family: 'Arial', 'Helvetica', 'sans-serif';
-    font-size: medium;
+    font-size: small;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
