--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+code {
+    font-size: x-large;
+}
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
