--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,9 @@ a:hover {
     text-decoration: underline;
 }
 
-code {
+/*code {
     font-size: 2em;
-}
+}*/
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
